discussion/kv_engine/153365/153365_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

wip: flush to shards/KVStores concurrently

Change-Id: I780574277c6fec87b1b608427f4a80419f8712c2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-05-20 15:03:11.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-20 16:30:24.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9054/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/magma-kvstore/magma-kvstore.h b/engines/ep/src/magma-kvstore/magma-kvstore.h
index 738cb4126..8905aba9c 100644
--- a/engines/ep/src/magma-kvstore/magma-kvstore.h
+++ b/engines/ep/src/magma-kvstore/magma-kvstore.h
@@ -160,7 +160,7 @@ struct MagmaKVStoreTransactionContext : public EPTransactionContext {
         : EPTransactionContext(stats, vb) {
     }
 
-    bool supportsConcurrentTxns() const {
+    bool supportsConcurrentTxns() const override {
         return true;
     }
 
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9054/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:163:10: warning: annotate this function with "override" or (rarely) "final" [modernize-use-override]
    bool supportsConcurrentTxns() const {
         ^
                                        override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:163:40: note: FIX-IT applied suggested code changes
    bool supportsConcurrentTxns() const {
                                       ^
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/magma-kvstore/magma-kvstore.h b/engines/ep/src/magma-kvstore/magma-kvstore.h
index 738cb4126..8905aba9c 100644
--- a/engines/ep/src/magma-kvstore/magma-kvstore.h
+++ b/engines/ep/src/magma-kvstore/magma-kvstore.h
@@ -160,7 +160,7 @@ struct MagmaKVStoreTransactionContext : public EPTransactionContext {
         : EPTransactionContext(stats, vb) {
     }
 
-    bool supportsConcurrentTxns() const {
+    bool supportsConcurrentTxns() const override {
         return true;
     }
 
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/9054/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35924/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
..\kv_engine\tests\testapp\testapp_sasl.cc(325): error: Expected equality of these values:
  cb::mcbp::Status::NotMyVbucket
    Which is: I"m not responsible for this vbucket
  getRsp.getStatus()
    Which is: Not found
[  FAILED  ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp, where GetParam() = Mcbp (97 ms)
TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35924/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7606/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30706/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9677/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10609/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10752/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11009/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18561/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
